perf: set default telegram msg to false

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 ####################################
 # telegram mode                    #
-# Default: true                    #
+# Default: false                   #
 # False to disable telegram msgs   #
 ####################################
-TELEGRAM_MODE=true
+TELEGRAM_MODE=false
 
 ####################################
 # bot token                        #
